--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   },
   "bugs": "https://github.com/blockfirm/pine-app/issues",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "test": "TZ='Europe/Stockholm' jest --forceExit --maxWorkers=4",
     "test-coverage": "TZ='Europe/Stockholm' jest --coverage --forceExit --maxWorkers=4",
     "lint": "./node_modules/.bin/eslint --ext .js index.js src/ __tests__/ __mocks__/",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | node_modules/.bin/coveralls"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.0.1",
     "@react-native-community/async-storage": "^1.5.0",
     "@react-native-community/blur": "^3.3.1",
-    "@react-native-community/netinfo": "^3.2.1",
+    "@react-native-community/netinfo": "^4.1.1",
     "assert": "^1.4.1",
     "bip21": "^2.0.2",
     "bip32": "^1.0.2",
@@ -37,18 +38,18 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "process": "^0.11.10",
-    "react": "16.8.3",
+    "react": "16.8.6",
     "react-apple-easing": "^0.0.2",
-    "react-native": "0.59.9",
+    "react-native": "0.60.0",
     "react-native-background-fetch": "^2.6.0",
     "react-native-camera": "^1.13.1",
     "react-native-crypto": "^2.1.2",
     "react-native-fast-image": "^6.0.3",
     "react-native-haptic": "^1.0.9",
-    "react-native-icloud-account-status": "^1.0.1",
+    "react-native-icloud-account-status": "^1.0.2",
     "react-native-icloudstore": "^0.9.0",
-    "react-native-image-crop-picker": "^0.24.1",
-    "react-native-image-picker": "^0.28.0",
+    "react-native-image-crop-picker": "^0.25.0",
+    "react-native-image-picker": "^1.1.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keep-awake": "^4.0.0",
     "react-native-keyboard-spacer": "^0.4.1",
@@ -59,8 +60,7 @@
     "react-native-search-bar": "^3.4.2",
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-static-safe-area-insets": "^1.2.0",
-    "react-native-svg": "^9.4.0",
-    "react-native-text-gradient": "^0.0.16",
+    "react-native-svg": "9.9.2",
     "react-native-tooltip": "^5.2.0",
     "react-native-touch-id": "git+https://github.com/blockfirm/react-native-touch-id.git",
     "react-native-vector-icons": "^6.0.2",
@@ -91,7 +91,7 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
-    "react-test-renderer": "16.8.3",
+    "react-test-renderer": "16.8.6",
     "reactotron-react-native": "^2.1.0"
   },
   "jest": {
