--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "process": "^0.11.10",
-    "react": "16.8.6",
+    "react": "16.9.0",
     "react-apple-easing": "^0.0.2",
-    "react-native": "0.60.5",
+    "react-native": "0.61.4",
     "react-native-background-fetch": "^2.6.0",
     "react-native-camera": "^1.13.1",
     "react-native-crypto": "^2.1.2",
@@ -62,7 +62,7 @@
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-static-safe-area-insets": "^1.2.0",
     "react-native-svg": "9.9.2",
-    "react-native-tooltip": "^5.2.0",
+    "react-native-tooltip": "git+https://github.com/blockfirm/react-native-tooltip.git",
     "react-native-touch-id": "git+https://github.com/blockfirm/react-native-touch-id.git",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
@@ -76,23 +76,23 @@
     "vm-browserify": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-transform-flow-strip-types": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/runtime": "^7.4.5",
+    "@babel/runtime": "^7.6.2",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "^24.9.0",
     "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "coveralls": "^3.0.2",
     "eslint": "^5.8.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.8.6",
+    "react-test-renderer": "16.9.0",
     "reactotron-react-native": "^2.1.0"
   },
   "jest": {
