--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "create-hash": "^1.2.0",
     "deepmerge": "^2.1.0",
     "elliptic": "^6.4.1",
+    "eventemitter3": "^4.0.0",
     "events": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
