--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.6",
     "bn.js": "^5.0.0",
+    "bolt11": "^1.2.7",
     "bs58check": "^2.1.2",
     "buffer": "^5.1.0",
     "coinselect": "^3.1.11",
