--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native": "0.61.4",
     "react-native-appearance": "^0.3.1",
     "react-native-background-fetch": "^2.6.0",
+    "react-native-begin-background-task": "git+https://github.com/blockfirm/react-native-begin-background-task.git",
     "react-native-camera": "^1.13.1",
     "react-native-crypto": "^2.1.2",
     "react-native-fast-image": "^6.0.3",
