--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-search-bar": "^3.5.1",
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-static-safe-area-insets": "^1.2.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "9.13.3",
     "react-native-tooltip": "git+https://github.com/blockfirm/react-native-tooltip.git",
     "react-native-touch-id": "git+https://github.com/blockfirm/react-native-touch-id.git",
@@ -103,6 +104,9 @@
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0",
     "reactotron-react-native": "^2.1.0"
+  },
+  "resolutions": {
+    "react-navigation/react-native-safe-area-view": "git+https://github.com/blockfirm/react-native-safe-area-view.git"
   },
   "jest": {
     "preset": "react-native",
