--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,10 @@ target 'Pine' do
   post_install do |installer|
     find_and_replace("../node_modules/react-native/Libraries/Image/RCTUIImageViewAnimated.m",
     "_currentFrame.CGImage;","_currentFrame.CGImage; } else { [super displayLayer:layer];")
+
+    ## Fix for XCode 12.5
+    find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm", "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
+    find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm", "RCTBridgeModuleNameForClass(strongModule))", "RCTBridgeModuleNameForClass(Class(strongModule)))")
   end
 
   use_native_modules!
